syntax = "proto3";
package proto.config;

option go_package = "github.com/spinnaker/kleat/api/client/config";

import "google/protobuf/wrappers.proto";

import "security/trust_store.proto";
import "config/service_enabled.proto";

// Configuration for the Orca microservice.
message Orca {
  PipelineTemplates pipelineTemplates = 1;
  security.WebhookConfig webhook = 2;
  Defaults default = 3;
  Services services = 4;
  Tasks tasks = 5;

  // Configuration for the status of non-core services.
  message Services {
    // Enabling Kayenta for the orca service
    ServiceSettings kayenta = 1;

    // Enabling Keel for the orca service
    ServiceSettings keel = 2;
  }

  // Configuration for pipeline templates.
  message PipelineTemplates {
    // Whether pipeline templates are enabled.
    google.protobuf.BoolValue enabled = 1;
  }

  // Defaults applicable to the orca microservice.
  message Defaults {
    // Configuration of bakery defaults.
    BakeDefaults bake = 1;

    // Configuration of bakery defaults.
    message BakeDefaults {
      // The default account to use for baking.
      string account = 1;
    }
  }

  // Configuration for Orca tasks.
  message Tasks {
    // Execution window configuration.
    ExecutionWindow executionWindow = 1;

    // Execution window configuration.
    message ExecutionWindow {
      // Default timezone. Defaults to `America/Los_Angeles`.
      string timezone = 1;
    }
  }
}
